	- [roms]  $2591: speed-up displaying of code window by populating ROM calls early
	- [kevin] $2596: fixed coordinate saving for Win32 multi-monitor case
	- [kevin] $2598: fixed KDE path detection for multilib systems with both 32-bit and 64-bit libraries installed
	- [roms]  $2600: clear _all_ bkpts in ti68k_bkpt_clear_all
	- [roms]  $2601: added support for breakpoints on bit changes
	- [roms]  $26xx: to do: data/bit change breakpoint is raised after instruction execution so PC shown in 
		breakpoint window and disassembly window is not really correct. Is being fixed...

- 16/03/2007, version 3.00
	- [kevin] $2389: don't use \n in the breakpoint window status bar
	- [kevin] $2390: fixed default hardware version for Voyage 200
	- [roms]  $2409: added KDE desktop files & associations
	- [roms]  $2415: allow to load saved states by DnD
	- [roms]  $2417: allow to directly load ROM/TIB/SAV files from command line; maintained compatibility with older switches
	- [roms]  $2420: fixed bug introduced in $2417
	- [roms]  $2421: fixed double-free when DnD files to send
	- [kevin] $2422: fixed errors (wrong case) in ROM_CALL list and added 2 new entries from TIGCC
	- [kevin] $2424: don't disassemble instructions invalid for the 68000
	- [kevin] $2425: fixed handling of 4-byte F-Line jumps
	- [roms]  $2431: added memory map menu to the memory window
	- [roms]  $2434: added key press recording/playing
	- [roms]  $2440: fixed bug in the Infos box: display skin version according to SkinInfos structure
	- [kevin] $2451: fixed aliasing violations in Win32 file dialog code
	- [kevin] $2456: detect *-apple-darwin* as OS X, not just powerpc-apple-darwin*
	- [kevin] $2457: fixed --disable-gdb builds failing due to missing intl/Makefile
	- [kevin] $2459: fixed Win32 file dialogs not setting fname to NULL when returning NULL
	- [kevin] $2462: filter -s from CFLAGS/CXXFLAGS/LDFLAGS on Darwin
	- [kevin] $2485: OLE Automation: set ret to NULL if IUnknown::QueryInterface fails